<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/level"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary">


    <Button
        android:text="@string/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMedium"
        android:onClick="buttonMedium"
        android:layout_below="@+id/buttonEasy"
        android:layout_alignStart="@+id/buttonEasy"
        android:layout_marginTop="37dp" />

    <Button
        android:text="@string/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonHard"
        android:onClick="buttonHard"
        android:layout_below="@+id/buttonMedium"
        android:layout_alignStart="@+id/buttonMedium"
        android:layout_marginTop="44dp" />

    <Button
        android:text="@string/easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEasy"
        android:onClick="buttonEasy"
        android:layout_marginTop="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
    android:text="@string/picklevel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textView3"
        android:fontFamily="Calabri"
        android:textSize="29sp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
