<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tobi.netwalkgamei7420725.MainActivity"
    android:background="@color/colorPrimary">


    <ImageView
        android:contentDescription="@string/netwalk_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/netwalk1"
        android:id="@+id/netwalkLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/play_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPlay"
        android:onClick="buttonPlay"
        tools:ignore="UnknownId"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/netwalkLogo"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/game_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInstruction"
        android:onClick="buttonInstruction"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/buttonPlay"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
